fix chrome footer spacing issue

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -154,8 +154,7 @@ footer.desktop {
     background-color: $grey;
     display: grid;
     grid-template: auto / repeat(4, 1fr);
-    padding: 5%;
-    padding-top: 15%;
+    padding: 25px;
     min-height: 10vh;
   }
 
